--- a/config/config.yaml
+++ b/config/config.yaml
@@ -48,9 +48,9 @@ ai:
     # Ollama 本地模型（推荐用于本地使用）
     ollama:
       enabled: true
-      base_url: "http://localhost:11434"
-      model: "llama3"  # 可用的模型: llama3, llama2, mistral 等
-      timeout: 60
+      base_url: "http://192.168.124.148:11434"
+      model: "llama3.1:70b"  # 可用的模型: llama3, llama2, mistral 等
+      timeout: 120
     
     # OpenAI API（需要 API 密钥）
     openai:
