docs: 创建完整的用户使用手册并重新组织项目结构
- 新增完整的用户使用手册 (docs/USER_MANUAL.md)，涵盖所有功能
- 重新组织文档：将所有开发文档移动到 docs/dev/ 目录
- 重新组织测试：将所有测试文件移动到 tests/ 目录
- 新增 INSTALL.md 安装说明文档
- 新增双语支持：analysis_prompts_en.py 和 report_labels.py
- 更新 README.md，添加使用手册链接，修正命令示例为 python -m bdfeasyinput.cli
- 更新配置文件和代码以支持新功能

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -41,7 +41,7 @@ ai:
   enabled: true
   
   # 默认使用的 AI 提供商
-  default_provider: "openrouter"  # 选项: "ollama", "openai", "anthropic", "openrouter", "together", "groq", "deepseek", "mistral", "perplexity"
+  default_provider: "ollama"  # 选项: "ollama", "openai", "anthropic", "openrouter", "together", "groq", "deepseek", "mistral", "perplexity"
   
   # AI 提供商配置
   providers:
@@ -49,8 +49,8 @@ ai:
     ollama:
       enabled: true
       base_url: "http://192.168.124.148:11434"
-      model: "llama3.1:70b"  # 可用的模型: llama3, llama2, mistral 等
-      timeout: 120
+      model: "gpt-oss:120b"  # 可用的模型: llama3, llama2, mistral 等
+      timeout: 180
     
     # OpenAI API（需要 API 密钥）
     openai:
@@ -135,6 +135,9 @@ analysis:
     
     # 温度参数（控制随机性）
     temperature: 0.7
+    
+    # 分析语言：'zh' (中文) 或 'en' (英文)
+    language: en  # 选项: "zh", "en"
   
   # 输出配置
   output:
