feat: 添加YAML生成、结果提取和远程执行功能
主要新增功能：

1. YAML生成模块 (yaml_generator.py)
   - 从模板生成YAML配置
   - 从XYZ文件生成YAML配置
   - 支持多种任务类型（energy, optimize, frequency, tddft）

2. 结果提取模块 (extraction/)
   - BDFResultExtractor: 从BDF输出提取结构化指标
   - Metrics类: 标准化的结果数据结构
   - 支持多种计算类型的结果提取

3. 远程执行支持
   - remote_ssh.py: SSH远程直接执行BDF
   - remote_slurm.py: Slurm作业提交支持
   - 配置文件中添加远程执行配置选项

4. 转换工具 (conversion_tool.py)
   - ConversionTool类: 批量转换YAML到BDF输入
   - 支持单文件和批量处理

5. CLI增强
   - 新增 extract 命令: 提取BDF输出指标
   - 新增 yaml 子命令组:
     * yaml generate: 生成YAML模板
     * yaml from-xyz: 从XYZ文件生成YAML

6. Schema集成
   - Validator重构: 使用bdfeasyinput_schema进行Pydantic验证
   - 类型安全的配置验证
   - 向后兼容性支持

7. 测试和文档
   - 新增5个测试文件，覆盖新功能
   - 新增12+个文档文件，详细说明新功能
   - 添加示例文件和测试输出

8. 配置文件更新
   - 添加远程执行配置（SSH和Slurm）
   - 更新BDF安装路径和Ollama地址

统计：
- 新增文件: 40+ 个
- 修改文件: 12 个
- 新增代码: +9690 行
- 删除代码: -241 行

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,13 +6,17 @@
 # 执行配置 (Execution)
 # ============================================================================
 execution:
-  # 执行类型：'direct' 或 'bdfautotest'
-  type: bdfautotest  # 使用 BDFAutoTest 模式
+  # 执行类型：
+  # - direct       : 本地直接执行 BDF
+  # - bdfautotest  : 通过 BDFAutoTest 执行
+  # - remote_ssh   : 通过 SSH 在远程节点直接运行 BDF（nohup 等）
+  # - remote_slurm : 通过 SSH + Slurm 提交作业
+  type: direct  # 当前默认使用 BDFAutoTest 模式
   
   # 直接执行模式配置（当 type: direct 时）
   direct:
     # BDF 安装目录（必需）
-    bdf_home: "/Users/bsuo/bdf/bdf-pkg-full/build_1/bdf-pkg-full"
+    bdf_home: "/Users/bsuo/bdf/bdf-pkg-full/build/bdf-pkg-full"
     
     # 临时文件目录（可选，默认 "/tmp/$RANDOM"）
     # 支持 $RANDOM 占位符，每次运行生成随机目录名避免冲突
@@ -29,8 +33,39 @@ execution:
     
     # 配置文件路径（可选，默认使用 BDFAutotest 的 config/config.yaml）
     config_file: null
+
+  # 远程 SSH 直接执行模式（当 type: remote_ssh 时）
+  # 注意：SSH 免密登录由用户自行配置
+  remote_ssh:
+    host: "AMD7900"    # 远程登录节点
+    user: "bsuo"                 # 可选，不写则用默认 SSH 用户
+    port: 20214
+    workdir: "/home/bsuo/test/BDFJobs"  # 远程工作根目录
+    bdf_command: "/home/bsuo/work/bin/runbdf.sh"              # 远程 BDF 启动命令
+    env_setup:                        # 远程环境初始化命令（可选）
+      - "source ~/.bashrc"
+      #- "module load bdf/2025"
+
+  # 远程 Slurm 提交模式（当 type: remote_slurm 时）
+  remote_slurm:
+    host: "login1.cluster.example"
+    user: "your_user"
+    workdir: "/path/on/remote/BDFJobs"
+    sbatch_command: "sbatch"
+    # 本地 Slurm 作业脚本模板路径（支持简单占位符，如 {{JOB_NAME}}、{{INPUT_FILE}} 等）
+    job_script_template: "config/slurm_bdf_job.sh.j2"
+    env_setup:
+      - "source ~/.bashrc"
+      - "module load bdf/2025"
+    default_slurm:
+      partition: "compute"
+      ntasks: 1
+      cpus_per_task: 8
+      time: "02:00:00"
+      # 可选：如果模板中需要，可通过 {{BDF_COMMAND}} 使用
+      bdf_command: "run.x"
   
-  # 默认超时时间（秒）
+  # 默认超时时间（秒）（仅适用于本地执行/BDFAutotest）
   timeout: 3600
 
 # ============================================================================
@@ -48,7 +83,7 @@ ai:
     # Ollama 本地模型（推荐用于本地使用）
     ollama:
       enabled: true
-      base_url: "http://192.168.6.230:11434"
+      base_url: "http://192.168.124.148:11434"
       model: "gpt-oss:120b"  # 可用的模型: llama3, llama2, mistral 等
       timeout: 240
     
