--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 # 核心依赖
+# 注意：现在要求 Python 3.9+，可以使用 Pydantic 2.0
 pyyaml>=6.0
 pydantic>=2.0
 jinja2>=3.1.0
 requests>=2.28.0  # For Ollama client HTTP requests
+# 共享 YAML schema 包（本地开发路径，可在发布到 PyPI 后改为普通依赖）
+bdfeasyinput-schema @ file:///Users/bsuo/bdf/bdfeasyinput_schema
 
 # 命令行界面
 click>=8.0
